--- a/list.html
+++ b/list.html
@@ -30,6 +30,61 @@
       <dd>-Black hot drink</dd>
     </ol>
   </ol>
+
+
+
+  <title>Simple Table</title>
+  <style>
+    table {
+      width: 50%;
+      border-collapse: collapse;
+      margin: 20px auto;
+      font-family: Arial, sans-serif;
+    }
+
+    th,
+    td {
+      border: 1px solid #333;
+      padding: 10px;
+      text-align: center;
+    }
+
+    th {
+      background-color: #f4f4f4;
+    }
+
+    tr:nth-child(even) {
+      background-color: #f9f9f9;
+    }
+  </style>
+
+  <body>
+    <table>
+      <tr>
+        <th>Name</th>
+        <th>Age</th>
+        <th>City</th>
+      </tr>
+      <tr>
+        <td>Alice</td>
+        <td>25</td>
+        <td>New York</td>
+      </tr>
+      <tr>
+        <td>Bob</td>
+        <td>30</td>
+        <td>Los Angeles</td>
+      </tr>
+      <tr>
+        <td>Charlie</td>
+        <td>28</td>
+        <td>Chicago</td>
+      </tr>
+    </table>
+  </body>
+
+</html>
+
 </body>
 
 </html>
